fix: css overflow refinement

--- a/assets/sass/globals.scss
+++ b/assets/sass/globals.scss
@@ -191,7 +191,7 @@ header {
 }
 
 .column {
-  overflow: auto;
+  overflow-x: auto;
 }
 
 .column img {
